--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="img/tim-berners-lee-128px.jpg">
     
     <h2>Información general</h2>
-    Tim Berners-Lee nació en el sudoeste de Londres, Reino Unido, el 8 de junio de 1955. 
+    Tim Berners-Lee nació en el sudoeste de Londres, Reino Unido, el 8 de junio de 1955. Estableció la primera comunicación entre un cliente y un servidor usando el protocolo HTTP en diciembre de 1990. 
     
     <h2>Creación de la WWW</h2>
     Tim Berners-Lee creó la WWW en 1989 como parte de su trabajo en la <a href="https://home.cern/">Organización Europea para la Investigación Nuclear (CERN)</a>.
